force-app/main/default/objects/Account/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>