force-app/main/default/objects/Account/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debt</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>