force-app/main/default/objects/Account/fields/Financing_Local__c.field-meta.xml
<CustomField>
    <fullName>Financing_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This was added at the time of Implementation</description>
    <label>Financing</label>
    <referenceTo>leaseworks__Financing__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>