force-app/main/default/objects/Account/fields/Fund_Local__c.field-meta.xml
<CustomField>
    <fullName>Fund_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This was added at the time of Implementation</description>
    <label>Fund</label>
    <referenceTo>pro_Fund__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>