force-app/main/default/objects/Account/fields/Investment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Investment_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment / Strategy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMEog</relationshipName>
    <type>Lookup</type>
</CustomField>