force-app/main/default/objects/Account/fields/Jurisdiction_of_incorporation_Local__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_of_incorporation_Local__c</fullName>
    <description>This was added at the time of Implementation</description>
    <label>Jurisdiction of incorporation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>