force-app/main/default/objects/Account/fields/KYC_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>KYC_Risk_Rating__c</fullName>
    <label>KYC Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>