force-app/main/default/objects/Account/fields/leaseworks__Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account_Currency__c</fullName>
    <label>Z_Unused_2106 Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>