force-app/main/default/objects/Account/fields/leaseworks__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account_Number__c</fullName>
    <description>Bank Account Number, usually displayed on the printed Invoice</description>
    <inlineHelpText>Bank Account Number, usually displayed on the printed Invoice</inlineHelpText>
    <label>Z_Unused_2106 Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>