force-app/main/default/objects/Account/fields/leaseworks__Active__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Active__c</fullName>
    <label>Z_Unused_2206 Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>