force-app/main/default/objects/Account/fields/leaseworks__Alias__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Alias__c</fullName>
    <description>This field is used to identify and combine different comma-separated names for the same Account. The field is used for generating News Feed as well as Fleet Metrics from the World Fleet object.</description>
    <inlineHelpText>Add comma-separated values to identify and combine the Account names.</inlineHelpText>
    <label>Alias</label>
    <type>TextArea</type>
</CustomField>