force-app/main/default/objects/Account/fields/leaseworks__Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Analysis_Code__c</fullName>
    <inlineHelpText>Specific code or identifier assigned to the transactions to categorize or classify them for reporting and analysis purposes.</inlineHelpText>
    <label>Analysis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>