force-app/main/default/objects/Account/fields/leaseworks__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Approval_Status__c</fullName>
    <description>Field to capture the Approval Status if the Approval workflow is configured for the Bank Account as this is optional feature. Should be hidden if not used</description>
    <inlineHelpText>Field to capture the Approval Status if the Approval workflow is configured for the Bank Account as this is optional feature. Should be hidden if not used</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>