force-app/main/default/objects/Account/fields/leaseworks__BA_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BA_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting:Legal entity associated with the bank</description>
    <label>Z_Unused_2106 Bank Account Legal Entity</label>
    <referenceTo>leaseworks__Legal_Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>