force-app/main/default/objects/Account/fields/leaseworks__Bank_Account_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account_Close_Date__c</fullName>
    <label>Z_Unused_2106 Bank Account Close Date</label>
    <type>Date</type>
</CustomField>