force-app/main/default/objects/Account/fields/leaseworks__Bank_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting:GL Account Linked to the bank for Payments</description>
    <label>Z_Unused_2106 Bank GL Account</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>