force-app/main/default/objects/Account/fields/leaseworks__Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Branch_Name__c</fullName>
    <label>Z_Unused_2106 Branch Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>