force-app/main/default/objects/Account/fields/leaseworks__Company_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Details__c</fullName>
    <label>Company Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>