force-app/main/default/objects/Account/fields/leaseworks__Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Overview__c</fullName>
    <label>Company Overview</label>
    <type>TextArea</type>
</CustomField>