force-app/main/default/objects/Account/fields/leaseworks__Country__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>