force-app/main/default/objects/Account/fields/leaseworks__Country_Of_Registration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country_Of_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field can be manually updated or automatically based on the Registration Number. The logic takes into account the first Country Registration Codes and sets the Counery accordingly.</description>
    <label>Country Of Registration</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Accounts (Country Of Registration)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>