force-app/main/default/objects/Account/fields/leaseworks__Current_Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Lessee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is automatically checked if there is at least one active lease with this operator.</description>
    <inlineHelpText>This is checked automatically when the Operator has at least one active lease at the current date</inlineHelpText>
    <label>Current Lessee?</label>
    <type>Checkbox</type>
</CustomField>