force-app/main/default/objects/Account/fields/leaseworks__Date_Of_Last_Interaction_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Last_Interaction_F__c</fullName>
    <formula>leaseworks__Date_Of_Last_Interaction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is updated automatically and copied from the latest Interaction Log record created.</inlineHelpText>
    <label>Date Of Last Interaction</label>
    <type>Date</type>
</CustomField>