force-app/main/default/objects/Account/fields/leaseworks__External_Link__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_Link__c</fullName>
    <description>Link to the External document management portal, only for information</description>
    <inlineHelpText>Link to the External document management portal.</inlineHelpText>
    <label>External Document Link</label>
    <type>Url</type>
</CustomField>