force-app/main/default/objects/Account/fields/leaseworks__Final_Credit_Score_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final_Credit_Score_New__c</fullName>
    <label>Final Credit Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>