force-app/main/default/objects/Account/fields/leaseworks__Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_Institution__c</fullName>
    <label>Z_Unused_2106 Financial Institution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JPMorgan Chase Bank, N.A</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL BANK OF CHINA LIMITED</fullName>
            </value>
            <value>
                <fullName>Australia and New Zealand Banking Group Limited</fullName>
            </value>
            <value>
                <fullName>Banco Bilbao Vizcaya Argentaria</fullName>
            </value>
            <value>
                <fullName>BANCO DO BRASIL S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Popular de Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Bangkok Bank Public Company Limited</fullName>
            </value>
            <value>
                <fullName>Bank of America, N.A.</fullName>
            </value>
            <value>
                <fullName>BANK OF CHINA LIMITED</fullName>
            </value>
            <value>
                <fullName>Bank of Communications</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Taiwan</fullName>
            </value>
            <value>
                <fullName>Bank of the West</fullName>
            </value>
            <value>
                <fullName>Barclays Bank PLC</fullName>
            </value>
            <value>
                <fullName>BNP PARIBAS</fullName>
            </value>
            <value>
                <fullName>Branch Banking and Trust Company</fullName>
            </value>
            <value>
                <fullName>Capital One</fullName>
            </value>
            <value>
                <fullName>Chang Hwa Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Charter One Bank</fullName>
            </value>
            <value>
                <fullName>Chase Bank USA</fullName>
            </value>
            <value>
                <fullName>China Construction Bank</fullName>
            </value>
            <value>
                <fullName>Citibank, N.A.</fullName>
            </value>
            <value>
                <fullName>Citizens Bank of Massachusetts</fullName>
            </value>
            <value>
                <fullName>Citizens Bank of Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Colonial Bank, National Association</fullName>
            </value>
            <value>
                <fullName>Comerica Bank</fullName>
            </value>
            <value>
                <fullName>Commerce Bank</fullName>
            </value>
            <value>
                <fullName>COMMERZBANK AKTIENGESELLSCHAFT</fullName>
            </value>
            <value>
                <fullName>Commonwealth Bank of Australia</fullName>
            </value>
            <value>
                <fullName>Compass Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>