force-app/main/default/objects/Account/fields/leaseworks__Financial_Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_Risk_Profile__c</fullName>
    <label>Financial Risk Profile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>