force-app/main/default/objects/Account/fields/leaseworks__Fitch_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fitch_Rating__c</fullName>
    <inlineHelpText>Fitch Credit Rating</inlineHelpText>
    <label>Fitch Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>