force-app/main/default/objects/Account/fields/leaseworks__IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IATA_Code__c</fullName>
    <label>IATA Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>