force-app/main/default/objects/Account/fields/leaseworks__Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to mark the Account inactive. You cannot select inactive Accounts on Deal Wizard for new deal creation</description>
    <inlineHelpText>Check this to mark the Account inactive. You cannot select inactive Accounts on Deal Wizard for new deal creation</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>