force-app/main/default/objects/Account/fields/leaseworks__Interaction_Log__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the most recent Interaction Log associated to this account</description>
    <inlineHelpText>Link to the most recent Interaction Log associated to this account</inlineHelpText>
    <label>Last Interaction Log</label>
    <referenceTo>leaseworks__Customer_Interaction_Log__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>