force-app/main/default/objects/Account/fields/leaseworks__Internal_CS_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Internal_CS_Last_Year__c</fullName>
    <inlineHelpText>This field is being updated based on the records created under Credit Score  Record</inlineHelpText>
    <label>Internal Credit Score Last Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>