force-app/main/default/objects/Account/fields/leaseworks__Invoice_Types__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Types__c</fullName>
    <description>Select the types of invoices that should be restricted. This field is only applicable when invoice creation is restricted.</description>
    <inlineHelpText>Select the types of invoices that should be restricted. This field is only applicable when invoice creation is restricted.</inlineHelpText>
    <label>Invoice Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Default Interest</fullName>
            </value>
            <value>
                <fullName>Deferred - MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-SD</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest</fullName>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>