force-app/main/default/objects/Account/fields/leaseworks__Lessor_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting:Legal Entity associated to the Lessor</description>
    <label>Z_Unused_2406_Lessor Legal Entity</label>
    <referenceTo>leaseworks__Legal_Entity__c</referenceTo>
    <relationshipLabel>Accounts (Legal Entity)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>