force-app/main/default/objects/Account/fields/leaseworks__Lessor_Legal_Entity_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Legal_Entity_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The legal entity accounting dimension associated with the lessor.</description>
    <inlineHelpText>The legal entity accounting dimension associated with the lessor.</inlineHelpText>
    <label>Lessor Legal Entity</label>
    <referenceTo>leaseworks__Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>