force-app/main/default/objects/Account/fields/leaseworks__Lessor_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Tax_Registration_Number__c</fullName>
    <inlineHelpText>Input the VAT number of the entity here. This value prints on the invoice if &quot;Tax Type&quot; on the Lease = VAT.</inlineHelpText>
    <label>Z_Unused_2410 Lessor Tax Reg No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>