force-app/main/default/objects/Account/fields/leaseworks__Main_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Main_Email_Address__c</fullName>
    <description>Email address set up to contact the airline (preferably the CEO or the CFO of the firm)</description>
    <label>Main Email Address</label>
    <type>Email</type>
</CustomField>