force-app/main/default/objects/Account/fields/leaseworks__MR_Billing_Contact_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Billing_Contact_New__c</fullName>
    <label>Z_Unused_2410_MR Billing Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>