force-app/main/default/objects/Account/fields/leaseworks__Owned_Aircraft_Types__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Owned_Aircraft_Types__c</fullName>
    <label>Owned Aircraft Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A300</fullName>
            </value>
            <value>
                <fullName>A300 B4</fullName>
            </value>
            <value>
                <fullName>A310</fullName>
            </value>
            <value>
                <fullName>A319</fullName>
            </value>
            <value>
                <fullName>A320</fullName>
            </value>
            <value>
                <fullName>A321</fullName>
            </value>
            <value>
                <fullName>A330</fullName>
            </value>
            <value>
                <fullName>A340</fullName>
            </value>
            <value>
                <fullName>A380</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>727</fullName>
            </value>
            <value>
                <fullName>737</fullName>
            </value>
            <value>
                <fullName>747</fullName>
            </value>
            <value>
                <fullName>757</fullName>
            </value>
            <value>
                <fullName>767</fullName>
            </value>
            <value>
                <fullName>777</fullName>
            </value>
            <value>
                <fullName>787</fullName>
            </value>
            <value>
                <fullName>BAe 146 / Avro RJ</fullName>
            </value>
            <value>
                <fullName>Bombardier CRJ</fullName>
            </value>
            <value>
                <fullName>Bombardier CSeries</fullName>
            </value>
            <value>
                <fullName>Bombardier Dash 8</fullName>
            </value>
            <value>
                <fullName>Bombardier Q400</fullName>
            </value>
            <value>
                <fullName>de Havilland Dash 7</fullName>
            </value>
            <value>
                <fullName>Embraer E</fullName>
            </value>
            <value>
                <fullName>Embraer ERJ</fullName>
            </value>
            <value>
                <fullName>Fokker</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>Mitsubishi Regional Jet</fullName>
            </value>
            <value>
                <fullName>Shukhoi Superjet 100</fullName>
            </value>
            <value>
                <fullName>Fokker F50 / F60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>