force-app/main/default/objects/Account/fields/leaseworks__Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Region__c</fullName>
    <formula>Text(leaseworks__Country__r.leaseworks__Region__c )</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>