force-app/main/default/objects/Account/fields/leaseworks__Rent_Billing_Contact_CC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Billing_Contact_CC__c</fullName>
    <label>Z_Unused_2410_Rent Billing Contact(CC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>