force-app/main/default/objects/Account/fields/leaseworks__Rent_Payments_Before_Holidays__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Payments_Before_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Rent due date falls on a holiday, is the operator expected to pay it on the previous working day?</description>
    <inlineHelpText>If the Rent due date falls on a holiday, is the operator expected to pay it on the previous working day?</inlineHelpText>
    <label>Rent Payments Before Holidays?</label>
    <type>Checkbox</type>
</CustomField>