force-app/main/default/objects/Account/fields/leaseworks__Revenues__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revenues__c</fullName>
    <inlineHelpText>LTM Revenues</inlineHelpText>
    <label>Revenues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>