force-app/main/default/objects/Account/fields/leaseworks__Subtype__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Subtype__c</fullName>
    <description>Enter the type of Counterparty. Eg: Bank, OEM, Rating Agency etc</description>
    <inlineHelpText>Enter the type of Counterparty. Eg: Bank, OEM, Rating Agency etc</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>AOE Counsel</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Borescope Services</fullName>
            </value>
            <value>
                <fullName>Civil Aviation Authority (CAA)</fullName>
            </value>
            <value>
                <fullName>Consultant Services</fullName>
            </value>
            <value>
                <fullName>Corporate &amp; Transactional Firm</fullName>
            </value>
            <value>
                <fullName>Ferry Services</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>Original Equipment Manufacturer (OEM)</fullName>
            </value>
            <value>
                <fullName>Parts Services</fullName>
            </value>
            <value>
                <fullName>SPC</fullName>
            </value>
            <value>
                <fullName>SPV</fullName>
            </value>
            <value>
                <fullName>Storage / Preservation Services</fullName>
            </value>
            <value>
                <fullName>Sublessee</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>