force-app/main/default/objects/Account/fields/leaseworks__Summary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Summary__c</fullName>
    <inlineHelpText>Automatically copied from the latest Interaction Log</inlineHelpText>
    <label>Summary Of Last Interaction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>