force-app/main/default/objects/Account/fields/leaseworks__SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SWIFT_Code__c</fullName>
    <label>Z_Unused_2106 SWIFT Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>