force-app/main/default/objects/Account/fields/leaseworks__Total_Rent_Across_All_Active_Leases__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rent_Across_All_Active_Leases__c</fullName>
    <inlineHelpText>Total rent across all aircraft with this operator</inlineHelpText>
    <label>Rent Across All Active Leases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>