force-app/main/default/objects/Account/fields/leaseworks__Total_Rent_Collected_Since_Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rent_Collected_Since_Lease_Start__c</fullName>
    <inlineHelpText>Across all active leases - this is the roll up of Rent Collected across Rent Relief deals</inlineHelpText>
    <label>Rent Collected For Requested Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>