force-app/main/default/objects/Account/fields/leaseworks__Total_Rent_To_Be_Collected_Across_Leases__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rent_To_Be_Collected_Across_Leases__c</fullName>
    <inlineHelpText>Total Rent To Be Collected across all aircraft with this operator</inlineHelpText>
    <label>Rent Remaining Across All Leases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>