force-app/main/default/objects/Account/fields/leaseworks__Total_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Security_Deposit__c</fullName>
    <inlineHelpText>Total Security Deposit of Active Leases with this Operator</inlineHelpText>
    <label>Total Security Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>